--- a/gitops/bootstrap/workloads/infra/argo-rollouts.yaml
+++ b/gitops/bootstrap/workloads/infra/argo-rollouts.yaml
@@ -10,6 +10,7 @@ spec:
       repoURL: https://argoproj.github.io/argo-helm/
       helm:
         version: v3
+        namespace: argocd
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
